# gg-ai-modifier

./: README.md  pubspec.yaml
.github/workflows/: android.yml
README/: v2.0.0-cn_README.md  v2.0.0-en_README.md  v3.0.0-cn_README.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/native/arm64-v8a/: scanner_root
android/app/src/main/assets/native/armeabi-v7a/: scanner_root
android/app/src/main/assets/native/x86/: scanner_root
android/app/src/main/assets/native/x86_64/: scanner_root
android/app/src/main/cpp/: CMakeLists.txt  scanner.cpp  scanner_root.cpp  scanner_root_optimized.cpp  scanner_v19.cpp
android/app/src/main/kotlin/com/yl/aigg/ai_gg666/: LuaEngine.kt  MainActivity.kt  MemoryEngine.kt  MemoryFreezer.kt  (+5 more)
lib/: app.dart  main.dart  overlay_app.dart
lib/core/ffi/: native_bridge.dart
lib/core/llm/: function_handler.dart  llm_config.dart  llm_service.dart  prompt_builder.dart
lib/core/models/: bookmark_model.dart  memory_result.dart
lib/core/settings/: ai_read_depth.dart
lib/features/chat/: chat_page.dart  markdown_webview.dart
lib/features/home/: home_page.dart
lib/features/plugin/: plugin_center_page.dart
lib/features/process/: process_selector.dart
lib/features/script/: script_page.dart
lib/features/search/: search_page.dart
lib/features/settings/: settings_page.dart
lib/services/: process_service.dart  storage_service.dart
lib/widgets/: address_input.dart  game_selector.dart  value_editor.dart
update/: 2.0.0update.md  3.0.0update.md
